[gd_scene load_steps=4 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" path="res://MicRecord.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://c2re52petqrvx" path="res://Intro.ogg" id="2"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[node name="MicRecord" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -224.0
offset_right = 296.0
offset_bottom = 226.0
script = ExtResource( "1" )

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( "1" )
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( "2" )
volume_db = -6.0

[node name="Status" type="Label" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -225.0
offset_right = 313.0
offset_bottom = -199.0
grow_horizontal = 2
text = "Status: "
horizontal_alignment = 1
__meta__ = {
"_edit_layout_mode": 1,
=======
anchor_right = 1.0
offset_bottom = 26.0
text = "Status: "
horizontal_alignment = 1
__meta__ = {
"_edit_layout_mode": 0,
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
"_edit_use_custom_anchors": false
}

[node name="RecordButton" type="Button" parent="."]
minimum_size = Vector2(130, 40)
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = -148.0
offset_right = -128.0
offset_bottom = -108.0
=======
offset_left = 29.0
offset_top = 77.0
offset_right = 159.0
offset_bottom = 117.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
text = "Record"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="PlayButton" type="Button" parent="."]
minimum_size = Vector2(130, 40)
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -148.0
offset_right = 52.0
offset_bottom = -108.0
=======
offset_left = 209.0
offset_top = 77.0
offset_right = 339.0
offset_bottom = 117.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
disabled = true
text = "Play"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="PlayMusic" type="Button" parent="."]
minimum_size = Vector2(130, 40)
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = 170.0
offset_right = -127.0
offset_bottom = 210.0
=======
offset_left = 30.0
offset_top = 395.0
offset_right = 160.0
offset_bottom = 435.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
text = "Play Music"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="FormatLabel" type="Label" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -72.0
offset_right = -185.0
offset_bottom = -46.0
=======
offset_left = 33.0
offset_top = 153.0
offset_right = 102.0
offset_bottom = 179.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
text = "Format:"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="FormatOptionButton" type="OptionButton" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -75.0
offset_right = 28.0
offset_bottom = -44.0
=======
offset_left = 131.0
offset_top = 150.0
offset_right = 315.0
offset_bottom = 181.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
item_count = 3
selected = 1
popup/item_0/text = "8 Bit audio codec"
popup/item_0/id = 0
popup/item_1/text = "16 Bit audio codec"
popup/item_1/id = 1
popup/item_2/text = "IMA ADPCM Compression"
popup/item_2/id = 2
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="MixRateLabel" type="Label" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -33.0
offset_right = -185.0
offset_bottom = -7.0
=======
offset_left = 33.0
offset_top = 192.0
offset_right = 102.0
offset_bottom = 218.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
text = "Mix rate:"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="MixRateOptionButton" type="OptionButton" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -36.0
offset_right = -67.0
offset_bottom = -5.0
=======
offset_left = 131.0
offset_top = 189.0
offset_right = 220.0
offset_bottom = 220.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
item_count = 6
selected = 4
popup/item_0/text = "11025"
popup/item_0/id = 0
popup/item_1/text = "16000"
popup/item_1/id = 1
popup/item_2/text = "22050"
popup/item_2/id = 2
popup/item_3/text = "32000"
popup/item_3/id = 3
popup/item_4/text = "44100"
popup/item_4/id = 4
popup/item_5/text = "48000"
popup/item_5/id = 5
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="StereoLabel" type="Label" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = 8.0
offset_right = -185.0
offset_bottom = 34.0
=======
offset_left = 33.0
offset_top = 233.0
offset_right = 102.0
offset_bottom = 259.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
text = "Stereo:"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="StereoCheckButton" type="CheckButton" parent="."]
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 8.0
offset_right = -117.0
offset_bottom = 39.0
=======
offset_left = 126.0
offset_top = 233.0
offset_right = 170.0
offset_bottom = 264.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
button_pressed = true
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="SaveButton" type="Button" parent="."]
minimum_size = Vector2(130, 40)
<<<<<<< HEAD
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -258.0
offset_top = 59.0
offset_right = -128.0
offset_bottom = 99.0
=======
offset_left = 29.0
offset_top = 284.0
offset_right = 159.0
offset_bottom = 324.0
>>>>>>> 9322f698 (Added format, mix_rate and stereo settings for Mic Record Demo)
disabled = true
text = "Save WAV To:"
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[node name="Filename" type="LineEdit" parent="SaveButton"]
offset_left = 180.0
offset_right = 507.0
offset_bottom = 40.0
text = "user://record.wav"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_layout_mode": 0,
"_edit_use_custom_anchors": false
}

[connection signal="pressed" from="RecordButton" to="." method="_on_RecordButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PlayMusic" to="." method="_on_Play_Music_pressed"]
[connection signal="item_selected" from="FormatOptionButton" to="." method="_on_format_option_button_item_selected"]
[connection signal="item_selected" from="MixRateOptionButton" to="." method="_on_mix_rate_option_button_item_selected"]
[connection signal="toggled" from="StereoCheckButton" to="." method="_on_stereo_check_button_toggled"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
